--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
     max-width: 1600px;
-    padding: 0 10%;
+    padding: 0 5%;
     position: relative;
+    margin: 0 auto;
+    min-height: 100vh;
 }
