--- a/src/components/allGamesList/allGamesList.css
+++ b/src/components/allGamesList/allGamesList.css
@@ -1,6 +1,6 @@
 .allGamesList {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
     min-height: 100%;
