--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,8 +2,12 @@
     display: flex;
     justify-content: space-between;
     height: 80px;
+    background-color: #00000080;
+    border-radius: 20px;
+    padding: 5px 20px;
 }
 
 .header__logo {
     height: 70px;
+    border-radius: 40px;
 }
