--- a/src/components/gameCard/gameCard.css
+++ b/src/components/gameCard/gameCard.css
@@ -39,3 +39,10 @@
     font-size: 25px;
     text-align: center;
 }
+
+.game__add {
+    width: 150px;
+    height: 50px;
+    border-radius: 10px;
+    font-size: 20px;
+}
