--- a/src/components/allGamesList/pageControlls.css
+++ b/src/components/allGamesList/pageControlls.css
@@ -1,10 +1,13 @@
 .pageControlls {
     display: flex;
     justify-content: space-between;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 .pageControlls_button {
-    width: 100px;
-    height: 30px;
-    font-size: 20px;
+    font-size: 30px;
+    border-radius: 20px;
+    padding: 5px 15px;
+    width: 160px;
 }
