--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,7 @@
 .header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     height: 80px;
     background-color: #00000080;
     border-radius: 20px;
