--- a/src/components/header/switchButton.css
+++ b/src/components/header/switchButton.css
@@ -1,5 +1,6 @@
 .switch__container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     text-align: center;
     gap: 10px;
@@ -11,6 +12,9 @@
     display: inline-block;
     width: 60px;
     height: 34px;
+    display: flex;
+    align-items: center;
+    gap: 60px;
 }
 
 .switch input {
