--- a/src/components/allGamesList/allGamesList.css
+++ b/src/components/allGamesList/allGamesList.css
@@ -1,35 +1,163 @@
-.allGamesList {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-    min-height: 100%;
+.allGamesList__wrapper {
+    overflow: hidden;
 }
 
-.allGamesList__item {
-    width: 400px;
-    height: 500px;
+.allGamesList {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 37px;
+    min-height: 100%;
+    position: relative;
+    z-index: 2;
+    overflow: hidden;
+}
+
+.allGamesList__fullInfo {
+    position: absolute;
+    left: 0;
+    top: 100%;
+    z-index: 3;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(10px);
+    transition: 300ms;
+    color: #fff;
+    font-family: Rationale;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
+}
+
+.allGamesList__fullInfo_Active {
+    top: 0;
+}
+
+.allGamesList__fullInfo-description {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     position: relative;
-    padding: 10px 10px;
-    background-color: #80808050;
+    height: 100%;
+    padding: 10px 5px;
+    width: 100%;
+    z-index: 3;
+    color: #fff;
+    font-family: Rationale;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%; /* 75% */
+}
+
+.allGamesList__date_fullInfo {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    align-self: flex-start;
+    justify-self: flex-end;
+    line-height: 100%;
+    text-align: right;
+}
+
+.allGamesList__rating_fullInfo {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    align-self: flex-start;
+}
+
+.allgamesList__genres {
+    grid-column: 1/3;
+    grid-row: 3/4;
+    display: flex;
+    gap: 5px;
+}
+
+.allgamesList__genres-item {
+    border: 1.006px solid rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+    background: rgba(255, 255, 255, 0.1);
+    padding: 2px;
+    height: fit-content;
+}
+
+.allgamesList__platforms {
+    grid-column: 1/3;
+    grid-row: 4/5;
+    display: flex;
+    gap: 5px;
+}
+
+.allgamesList__platforms-item {
+    border: 1.006px solid rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(5px);
+    background: rgba(255, 255, 255, 0.1);
+    padding: 2px;
+    height: fit-content;
+}
+
+.allGamesList__item {
+    position: relative;
+    padding: 20px;
+    width: 270px;
+    height: 320px;
+    flex-shrink: 0;
+    border: 2px solid rgba(255, 255, 255, 0.15);
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(2.5px);
+    cursor: pointer;
+    z-index: 2;
+}
+
+.allGamesList__container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    flex-shrink: 0;
+    overflow: hidden;
+    z-index: 2;
 }
 
 .allGamesList__img {
+    position: absolute;
     display: block;
-    max-height: 60%;
-    max-width: 100%;
-    grid-column: 1 / 3;
-    grid-row: 1/4;
-    justify-self: center;
+    max-height: 100%;
+    z-index: 2;
+}
+
+.allGamesList__description {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    position: relative;
+    height: 50%;
+    padding: 10px 5px;
+    width: 100%;
+    background: linear-gradient(
+        180deg,
+        rgba(6, 6, 6, 0) 2%,
+        rgba(6, 6, 6, 0.7) 20%
+    );
+    z-index: 3;
+    color: #fff;
+    font-family: Rationale;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%; /* 75% */
+    font-size: 16px;
+    z-index: 2;
 }
 
 .allGamesList__name {
     grid-column: 1 / 3;
-    grid-row: 3 / 4;
+    grid-row: 1 / 2;
     justify-self: center;
+    text-align: center;
+    font-size: 32px;
+    line-height: 100%;
 }
 
 .allGamesList__rating {
@@ -43,4 +171,6 @@
     grid-row: 4/5;
     align-self: flex-end;
     justify-self: flex-end;
+    line-height: 100%;
+    text-align: right;
 }
