--- a/src/components/allGamesList/pageControlls.css
+++ b/src/components/allGamesList/pageControlls.css
@@ -1,13 +1,34 @@
 .pageControlls {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     margin-top: 40px;
     margin-bottom: 40px;
+    gap: 30px;
+    width: 100%;
+    position: relative;
 }
 
 .pageControlls_button {
-    font-size: 30px;
-    border-radius: 20px;
+    font-size: 16px;
     padding: 5px 15px;
-    width: 160px;
+    width: 110px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.pageControlls__button_toFirst {
+    position: absolute;
+    left: 0;
+}
+
+.pageControlls_button:hover:nth-child(0) {
+    color: #be4787;
+    fill: #be4787;
+}
+
+.pageControlls_icon {
+    fill: white;
 }
