--- a/src/components/favoritesList/favoritesList.css
+++ b/src/components/favoritesList/favoritesList.css
@@ -41,9 +41,12 @@
 }
 
 .favorites__delete {
-    width: 150px;
-    height: 50px;
+    width: 120px;
+    height: 40px;
+    font-size: 16px;
     border-radius: 10px;
-    font-size: 20px;
+    line-height: 15px;
     align-self: flex-end;
+    grid-column: 1/2;
+    grid-row: 4/5;
 }
