--- a/src/components/gameCard/gameCard.css
+++ b/src/components/gameCard/gameCard.css
@@ -2,47 +2,88 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 200px 1fr 1fr 100px 1fr;
-    background-color: #80808060;
-    border: solid 4px #00000050;
-    padding: 10px 20px;
+    background: rgba(255, 255, 255, 0.05);
+    padding: 40px;
+
+    color: #fff;
+    font-family: Rationale;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%; /* 100% */
 }
 
 .game__name {
-    grid-column: 1 / 5;
+    grid-column: 1 / 3;
     grid-row: 1 / 2;
-    font-size: 40px;
     align-self: center;
     justify-self: center;
+    color: #fff;
+    font-family: Rationale;
+    font-size: 96px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
+    text-transform: uppercase;
 }
 
 .game__rating {
-    grid-column: 1 /2;
-    grid-row: 4 / 5;
+    grid-column: 2 /3;
+    grid-row: 2 / 3;
     font-size: 25px;
+    align-self: flex-start;
+    justify-self: center;
+    text-transform: uppercase;
 }
 
 .game__date {
-    grid-column: 4 / 5;
-    grid-row: 4 / 5;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
     font-size: 25px;
+    align-self: center;
+    justify-self: center;
+    text-transform: uppercase;
 }
 
 .game__img {
-    grid-column: 1 / 5;
-    grid-row: 2 / 4;
+    grid-column: 3 / 5;
+    grid-row: 1 / 3;
     max-width: 100%;
 }
 
 .game__description {
     grid-column: 1 / 5;
-    grid-row: 5 / 6;
+    grid-row: 3 / 6;
     font-size: 25px;
     text-align: center;
+    margin-top: 40px;
 }
 
 .game__add {
     width: 150px;
     height: 50px;
     border-radius: 10px;
+    justify-self: center;
+    align-self: center;
     font-size: 20px;
+    background: none;
+    color: #fff;
+    font-family: Rationale;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+    border: 1.006px solid #fff;
+    background: linear-gradient(
+        180deg,
+        rgba(190, 71, 135, 0.25) 0%,
+        rgba(36, 41, 152, 0.25) 100%
+    );
+    backdrop-filter: blur(5px);
+    transition: 300ms;
+}
+
+.game__add:disabled {
+    border: 1.006px solid rgba(255, 255, 255, 0.3);
+    color: rgba(255, 255, 255, 0.3);
+    background: rgba(255, 255, 255, 0.05);
 }
