--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,10 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 80px;
-    background-color: #00000080;
-    border-radius: 20px;
-    padding: 5px 20px;
+    height: 110px;
+    padding: 5px 0;
 }
 
 .header__logo {
