--- a/src/components/header/navigation.css
+++ b/src/components/header/navigation.css
@@ -1,12 +1,64 @@
-.header__nav {
+.header__container {
     display: flex;
     align-items: center;
-    gap: 30px;
-    font-size: 30px;
+    color: #fff;
+    font-family: Rationale;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 75% */
+    text-transform: uppercase;
+}
+
+.header__nav {
+    display: flex;
+    color: #fff;
+    font-family: Rationale;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 75% */
+    text-transform: uppercase;
+}
+
+.header__link {
+    text-decoration: none;
+    width: 209px;
+    height: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 300ms;
+}
+
+.active {
+    text-decoration: underline;
+}
+
+.header__link:visited {
+    color: white;
+}
+
+.header__link:hover {
+    color: #be4787;
+}
+
+.header__splitline {
+    border-right: 3px solid rgba(255, 255, 255, 0.2);
 }
 
 .header__button {
-    font-size: 30px;
-    border-radius: 20px;
-    padding: 5px 15px;
+    width: 200px;
+    height: 50px;
+    font-size: 16px;
+}
+
+.header__nav_unauth {
+    gap: 35px;
+}
+
+.header__button_unauth {
+    width: 70px;
+    height: 50px;
+    font-size: 16px;
 }
