--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -2,7 +2,7 @@
     height: 80vh;
 }
 .loader__container {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
