--- a/src/components/search/gameList.css
+++ b/src/components/search/gameList.css
@@ -3,11 +3,15 @@
     height: fit-content;
     width: 40%;
     transition: 100ms;
-    background-color: grey;
-    border: solid 3px #00000080;
-    padding: 20px 30px;
+    background: rgba(0, 0, 0, 0.4);
+    border: 2px solid rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(15px);
+    padding: 10px 30px;
     opacity: 1;
     z-index: 3;
+    left: 0;
+    top: 82px;
+    color: white;
 }
 
 .search__list_hidden {
@@ -17,16 +21,27 @@
 
 .search__item {
     position: relative;
-    border: solid #00000090 2px;
-    padding: 5px 10px;
-    margin: 5px 10px;
+    margin: 10px 0px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     transition: 100ms;
     z-index: 4;
+    padding-bottom: 5px;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.15);
+    cursor: pointer;
+}
+
+.search__item:hover {
+    background: rgba(255, 255, 255, 0.1);
 }
 
 .search__img {
-    max-height: 80px;
+    max-height: 50px;
+    margin-right: 10px;
+}
+
+.search__loader {
+    position: relative;
+    max-height: 30vh;
 }
