--- a/src/components/search/searchInput.css
+++ b/src/components/search/searchInput.css
@@ -1,6 +1,9 @@
 .search__input {
-    width: 90%;
-    height: 40px;
+    width: 100%;
+    height: 60px;
+    padding-left: 15px;
+    padding-right: 15px;
     font-size: 30px;
-    border-radius: 20px;
+    font-size: 24px;
+    color: white;
 }
