--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,71 @@
+@import url('https://fonts.googleapis.com/css2?family=Gruppo&family=Rationale&display=swap');
+@font-face {
+    font-family: Rebellion;
+    src: url('./assets/fonts/Rebellion-oPoA.ttf') format('truetype');
+}
+
 * {
     box-sizing: border-box;
+    margin: 0;
+}
+
+.button {
+    background: none;
+    color: #fff;
+    font-family: Rationale;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+    border: 1.006px solid rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(5px);
+    transition: 300ms;
+}
+
+.button:hover {
+    border: 1.006px solid #fff;
+    background: rgba(255, 255, 255, 0.05);
+}
+
+.button:active {
+    border: 1.006px solid #fff;
+    background: linear-gradient(
+        180deg,
+        rgba(190, 71, 135, 0.25) 0%,
+        rgba(36, 41, 152, 0.25) 100%
+    );
+}
+
+.button:disabled {
+    border: 1.006px solid rgba(255, 255, 255, 0.3);
+    color: rgba(255, 255, 255, 0.3);
+}
+
+.input {
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(2.5px);
+    font-family: Rationale;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 100% */
+    transition: 300ms;
+}
+
+.input:hover {
+    border: 1.006px solid #fff;
+    background: rgba(255, 255, 255, 0.05);
+}
+
+.input:focus {
+    border: 1.006px solid #fff;
+    background: linear-gradient(
+        180deg,
+        rgba(190, 71, 135, 0.25) 0%,
+        rgba(36, 41, 152, 0.25) 100%
+    );
+}
+
+.input:disabled {
+    border: 1.006px solid rgba(255, 255, 255, 0.3);
+    color: rgba(255, 255, 255, 0.3);
 }
