--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,5 +1,20 @@
 .home {
     min-height: 100%;
     position: relative;
-    padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.home__title {
+    color: #fff;
+    font-family: Rebellion;
+    font-size: 96px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%; /* 66.667% */
+    margin-top: 65px;
+    margin-bottom: 40px;
+    position: relative;
+    z-index: 2;
 }
