--- a/src/components/allGamesList/allGamesList.css
+++ b/src/components/allGamesList/allGamesList.css
@@ -21,13 +21,14 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(5px);
     transition: 300ms;
     color: #fff;
     font-family: Rationale;
     font-style: normal;
     font-weight: 400;
     line-height: 100%;
+    padding: 20px;
 }
 
 .allGamesList__fullInfo_Active {
@@ -40,7 +41,6 @@
     grid-template-rows: 1fr 1fr 1fr 1fr;
     position: relative;
     height: 100%;
-    padding: 10px 5px;
     width: 100%;
     z-index: 3;
     color: #fff;
@@ -155,6 +155,7 @@
     grid-column: 1 / 3;
     grid-row: 1 / 2;
     justify-self: center;
+    align-self: flex-start;
     text-align: center;
     font-size: 32px;
     line-height: 100%;
