--- a/src/components/allGamesList/allGamesList.css
+++ b/src/components/allGamesList/allGamesList.css
@@ -20,7 +20,12 @@
     z-index: 3;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: linear-gradient(
+        180deg,
+        rgba(6, 6, 6, 0.5),
+        rgba(6, 6, 6, 0.7),
+        rgba(6, 6, 6, 1)
+    );
     backdrop-filter: blur(5px);
     transition: 300ms;
     color: #fff;
