--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -9,4 +9,8 @@
 .header__logo {
     height: 70px;
     border-radius: 40px;
+    cursor: pointer;
+}
+
+@media only screen and (max-width: 900px) {
 }
