--- a/src/components/header/navigation.css
+++ b/src/components/header/navigation.css
@@ -62,3 +62,38 @@
     height: 50px;
     font-size: 16px;
 }
+
+@media only screen and (max-width: 900px) {
+    .header__link {
+        text-decoration: none;
+        width: 150px;
+        height: 40px;
+        font-size: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: 300ms;
+    }
+    .header__button {
+        width: 200px;
+        height: 50px;
+        font-size: 16px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .header__nav {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        font-size: 32px;
+    }
+
+    .header__splitline {
+        border-right: none;
+    }
+
+    .active {
+        text-decoration: underline;
+    }
+}
