--- a/src/components/historyList/historyList.css
+++ b/src/components/historyList/historyList.css
@@ -11,6 +11,7 @@
     font-weight: 400;
     line-height: 24px; /* 100% */
     text-transform: uppercase;
+    text-align: center;
 }
 
 .historyList__button {
@@ -49,6 +50,7 @@
     border-bottom: rgba(255, 255, 255, 0.2) solid;
     cursor: pointer;
     transition: 300ms;
+    gap: 20px;
 }
 
 .histotyList__item:hover {
@@ -56,7 +58,29 @@
 }
 
 .histotyList__name {
+    text-align: left;
 }
 
 .histotyList__date {
+    min-width: 105px;
+}
+
+@media only screen and (max-width: 768px) {
+    .histotyList {
+        font-size: 16px;
+    }
+
+    .historyList__wrapper {
+        gap: 15px;
+        padding: 10px 10px;
+    }
+
+    .histotyList {
+        padding: 10px;
+    }
+
+    .historyList__button {
+        width: 100px;
+        height: 50px;
+    }
 }
