--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -17,4 +17,17 @@
     margin-bottom: 40px;
     position: relative;
     z-index: 2;
+    text-align: center;
+}
+
+@media only screen and (max-width: 760px) {
+    .home__title {
+        font-size: 50px;
+    }
+}
+
+@media only screen and (max-width: 440px) {
+    .home__title {
+        font-size: 40px;
+    }
 }
