--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -22,6 +22,13 @@
     align-items: center;
     gap: 56px;
     margin-top: 70px;
+    width: 100%;
+}
+
+.form__item {
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .form__input {
@@ -29,6 +36,7 @@
     flex-direction: column;
     gap: 10px;
     position: relative;
+    width: 100%;
 }
 
 .form__name {
@@ -36,7 +44,7 @@
 }
 
 .form__field {
-    width: 700px;
+    width: 50%;
     height: 60px;
     color: white;
     font-family: Rationale;
@@ -68,7 +76,8 @@
 .form__message {
     position: absolute;
     top: -25px;
-    left: 0px;
+    width: 50%;
+    text-align: right;
     color: #be4687;
     font-family: Rationale;
     font-size: 16px;
@@ -76,4 +85,19 @@
     font-weight: 400;
     line-height: 24px; /* 150% */
     text-transform: lowercase;
+}
+
+@media only screen and (max-width: 768px) {
+    .form__tip {
+        margin-top: 40px;
+    }
+
+    .form__field {
+        width: 80%;
+    }
+
+    .form__message {
+        top: -25px;
+        width: 80%;
+    }
 }
