feat: add navigation back button

--- a/src/components/gameCard/gameCard.css
+++ b/src/components/gameCard/gameCard.css
@@ -209,6 +209,10 @@
         padding: 10px;
     }
 
+    .game__name {
+        text-align: center;
+    }
+
     .game__rating {
         font-size: 20px;
     }
