--- a/src/components/header/navigation.css
+++ b/src/components/header/navigation.css
@@ -29,6 +29,7 @@
     align-items: center;
     justify-content: center;
     transition: 300ms;
+    color: white;
 }
 
 .active {
@@ -85,8 +86,12 @@
     .header__nav {
         display: flex;
         flex-direction: column;
-        justify-content: center;
         font-size: 32px;
+        gap: 35px;
+    }
+
+    .header__button {
+        margin-top: 35px;
     }
 
     .header__splitline {
