--- a/src/components/historyList/historyList.css
+++ b/src/components/historyList/historyList.css
@@ -14,12 +14,25 @@
     text-align: center;
 }
 
+.historyList__backButton {
+    width: 200px;
+    height: 50px;
+    grid-row: 1 / 2;
+    grid-column: 1;
+    align-self: flex-start;
+    justify-self: flex-end;
+    margin-right: -20px;
+    margin-top: -10px;
+}
+
 .historyList__button {
     font-size: 20px;
-    height: 30px;
+    height: 50px;
     width: 200px;
-    justify-self: flex-end;
-    align-self: center;
+    justify-self: flex-start;
+    align-self: flex-end;
+    grid-row: 1 / 2;
+    grid-column: 1;
 }
 
 .historyList__container {
@@ -28,6 +41,7 @@
     display: flex;
     flex-direction: column;
     gap: 70px;
+    margin-top: 50px;
 }
 
 .historyList__wrapper {
