--- a/src/components/historyList/historyList.css
+++ b/src/components/historyList/historyList.css
@@ -3,7 +3,7 @@
     padding: 10px 20px;
     font-size: 24px;
     display: grid;
-    grid-template-rows: 80px 1fr;
+    grid-template-rows: 100px 1fr;
     color: #fff;
     font-family: Rationale;
     font-size: 24px;
@@ -12,6 +12,11 @@
     line-height: 24px; /* 100% */
     text-transform: uppercase;
     text-align: center;
+}
+
+.historyList__actionbar {
+    display: flex;
+    justify-content: space-between;
 }
 
 .historyList__backButton {
@@ -33,6 +38,7 @@
     align-self: flex-end;
     grid-row: 1 / 2;
     grid-column: 1;
+    margin-bottom: 10px;
 }
 
 .historyList__container {
@@ -96,5 +102,9 @@
     .historyList__button {
         width: 100px;
         height: 50px;
+    }
+
+    .historyList__backButton {
+        margin-right: -10px;
     }
 }
